# jsac-torch-train-loop

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  setup.py
docs/source/: conf.py  index.rst  torch_train_loop.rst
examples/: README.rst  mnist.py  plot_mnist.py
jsac/torch_train_loop/: __init__.py  _version.py  core.py  helpers.py  input_parsers.py
tests/: test_train.py
